# recall

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
docs/: ARCHITECTURE.md  ROADMAP.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-ai-provider-abstraction.md  0003-storage-and-search.md
scripts/: install.sh
src/recall/: __init__.py  ai.py  capture.py  config.py  db.py  main.py  render.py  search.py
tests/: conftest.py  test_ai.py  test_capture.py  test_cli.py  test_config.py  test_db.py  test_integration.py  test_render.py  test_search.py
