[project]
name = "recall-cli"
version = "0.1.0"
description = "Automated, AI-powered CLI snippet manager — auto-captures shell commands, describes them, and finds them by meaning."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Recall contributors" }]
keywords = ["cli", "shell", "snippets", "history", "semantic-search", "sqlite"]

# Core stays light so `uv sync` is fast and offline-friendly.
# Heavy AI / embedding stacks live in optional extras below.
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "platformdirs>=4.0",   # correct per-OS data/config paths (Win/macOS/Linux)
    "tomli-w>=1.0",        # TOML writing (reading uses stdlib tomllib on 3.11+)
    "pyperclip>=1.8",      # clipboard copy for `recall search`
]

[project.optional-dependencies]
# Local-first, free description generation via Ollama; Claude optional.
ai = [
    "httpx>=0.27",         # talks to local Ollama HTTP API
    "anthropic>=0.40",     # OPTIONAL Claude provider (only used if a key is set)
]
# Semantic search. Pulls torch (~large); kept out of the core on purpose.
semantic = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
recall = "recall.main:app"

[project.urls]
Homepage = "https://github.com/Surge77/recall"
Repository = "https://github.com/Surge77/recall"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recall"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/recall"]
branch = true
